--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,20 @@
 Package: MuFiMeshGP
-Title: What the Package Does (One Line, Title Case)
+Type: Package
+Title: Multi-Fidelity Emulator for Computer Experiments with Tunable Fidelity Levels
 Version: 0.0.1
-Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: use_mit_license()
+Date: 2025-08-11
+Authors@R: c(
+    person(family = "Boutelet", given = "Romain", email = "boutelet@msu.edu", role = c("aut", "cre")),
+    person(family = "Sung", given = "Chih-Li", email = "sungchih@msu.edu", role = "aut"))
+Maintainer: Romain Boutelet <boutelet@msu.edu>
+Description: Multi-Fidelity emulator for data from computer simulations of the
+    same underlying system but at different input locations and fidelity level,
+    where both the input locations and fidelity level can be continuous. Active
+    Learning can be performed with an implementation of the IMSPE 
+    criterion developed by Boutelet and Sung (2025, <doi:10.48550/arXiv.2503.23158>).
+License: GPL (>= 2)
 Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
+Imports: lhs, parallel, methods, Rcpp
+LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 7.3.2
+NeedsCompilation: yes
